[workspace]
members = [
    "programs/pusd",
]

resolver = "2"

[profile.release]
opt-level = "s"          # Optimize for small binary size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimizations at the cost of compile time
panic = "abort"          # Smaller binary
overflow-checks = true   # Safety

