[package]
name = "pusd"
version = "0.1.0"
description = "PumpUSD ($PUSD) stablecoin protocol smart contract"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "pusd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.6"

[dev-dependencies]
solana-program-test = "1.18.6"
solana-sdk = "1.18.6"

